--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.rar
+link_analysis/json_to_pickle_converter.py
+link_analysis/my_funs.py
+run.cmd
+#Decision Files
+Decision files0/
+Decision Files/*
+*.pickle
+*.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -10,7 +19,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -102,3 +110,13 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# VS code
+.vscode
+
+#  test graph
+graph.json
+
+
+.DS_Store
+
